@@ -2043,7 +2043,7 @@ QR =
     # Starting to upload might take some time.
     # Provide some feedback that we're starting to submit.
     QR.status progress: '...'
-    rand =      Math.random().toString(36).substring(6)
+    rpc  =      response.replace(/^\s+/, '').replace(/\s+$/, '')
     post =
       resto:    threadID
       name:     reply.name
@@ -2056,7 +2056,7 @@ QR =
       mode:     'regist'
       pwd:      if m = d.cookie.match(/4chan_pass=([^;]+)/) then decodeURIComponent m[1] else $('input[name=pwd]').value
       recaptcha_challenge_field: challenge
-      recaptcha_response_field:  response.replace(/^\s+/, rand + ' ').replace /\s+$/, ' ' + rand
+      recaptcha_response_field:  rpc + ' ' + rpc
 
     try
       console.log.bind? console
